--- a/styles-copy.css
+++ b/styles-copy.css
@@ -41,7 +41,7 @@ body {
     top: 130px;
     width: 285px;
     height: 160px;
-    background: url(./interactive-card-details-form-main/images/bg-card-front.png);
+    background: url(./images/bg-card-front.png);
     background-size: cover;
     border-radius: 10px;
 }
@@ -83,7 +83,7 @@ body {
     left: 25%;
     width: 285px;
     height: 160px;
-    background: url(./interactive-card-details-form-main/images/bg-card-back.png);
+    background: url(./images/bg-card-back.png);
     background-size: cover;
     border-radius: 10px;
 }
@@ -102,7 +102,7 @@ body {
     left: 0;
     width: 100vw;
     height: 60vw;
-    background: no-repeat url(./interactive-card-details-form-main/images/bg-main-mobile.png);
+    background: no-repeat url(./images/bg-main-mobile.png);
     background-size: cover;
 }
 
@@ -161,7 +161,7 @@ button {
         max-width: 100vw;
     }
    .bg {
-    background: no-repeat url(./interactive-card-details-form-main/images/bg-main-desktop.png);
+    background: no-repeat url(./images/bg-main-desktop.png);
     width: 30%;
     height: 100%;
     }
