--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,15 @@ body {
         opacity: 1;
     }
 }
-h1 {
-    display: block;
-    width: 0;
-    height: 0;
+.sr-only {
+    position: absolute;
+    width: 1rem;
+    height: 1rem;
+    padding: 0;
+    margin: -1rem;
     overflow: hidden;
-    visibility: hidden;
+    white-space: nowrap;
+    border: 0;
 }
 .front {
     position: absolute;
@@ -364,9 +367,6 @@ span {
     }
     button {
         font-size: 14px;
-    }
-    .inline {
-        
     }
     .inline__expiry__inline input {
         max-width: 4rem;
